2008-03-23  Albert Chu <chu11@llnl.gov>

	* common/doc/manpage-common-workaround-text.man,
	common/doc/manpage-common-workaround-text.man,
	doc/freeipmi-bugs-and-workarounds.txt: Add new motherboard for
	asus workarounds.
	
2008-03-19  Albert Chu <chu11@llnl.gov>

	* bmc-watchdog/src/bmc-watchdog.c (_init_ipmi): Fix probing issue.

	* bmc-watchdog/src/bmc-watchdog.c (_cmd): Fix openipmi corner case.
	
2008-03-06  Albert Chu <chu11@llnl.gov>

	* common/doc: Minor updates.

	* doc/freeipmi-bugs-and-workarounds.txt: New doc.
	
2008-02-23  Albert Chu <chu11@llnl.gov>

	* ipmi-fru/: Re-work to avoid excessive IPMI transactions.

2008-02-22  Albert Chu <chu11@llnl.gov>

	* ipmi-fru/src/ipmi-fru-util.c: Fix bad return types.

2008-02-22  Albert Chu <chu11@llnl.gov>

	* ipmi-fru/ipmi-fru.8.pre.in: Fix typos.

	* ipmi-fru/src/ipmi-fru-util.c: Fix typo.

	* ipmi-fru/src/ipmi-fru-util.c (_sixbitascii_to_ascii): Fix
	conversion corner cas.
	
2008-02-21  Albert Chu <chu11@llnl.gov>

	* common/doc/manpage-common-workaround-text.man: Add forgotten Sun
	Fire 4100 workaround.

	* doc/freeipmi-coding.txt: Add chunk on workarounds implemenation.

	* libfreeipmi/src/api/ipmi-lan-session-common.c
	(ipmi_lan_open_session): Fix sun workaround bug.
	
2008-02-19  Albert Chu <chu11@llnl.gov>

	* common/src/config-commit.c (config_commit_section): Fix bug.
	
2008-02-18  Albert Chu <chu11@llnl.gov>

	* freeipmi.spec.in: Add ipmi-sensors-config.
	
2008-02-18  Albert Chu <chu11@llnl.gov>

	Merge contents from sensors_config_branch.

        * common/doc/manpage-common-outofband-username-operator.man,
        common/doc/manpage-common-privilege-level-operator.man: New files.

	* common/src/tool-cmdline-common.h,
	common/src/tool-cmdline-common.c: Support operator privilege
	defaults.

        * bmc-config/src/, pef-config/src/: Adjust architecture for common
        config code.

	* libfreeipmi/include/freeipmi/cmds/ipmi-sensor-cmds.h,
	libfreeipmi/src/cmds/ipmi-sensor-cmds.c