@@ -1,3 +1,7 @@
+2008-03-27  Albert Chu <chu11@llnl.gov>
+
+	* bmc-watchdog/src/bmc-watchdog.c: Fix compile bugs.
+	
 2008-03-23  Albert Chu <chu11@llnl.gov>
 
 	* common/doc/manpage-common-workaround-text.man,
